(executables
 (names main)
 (flags
  (:standard -w +a-3-4-6-9-22-26-27-30-32-33-34-39-40-41-42-44-48-60 -unsafe-string -short-paths -strict-formats -strict-sequence))
 (ocamlopt_flags
  (:standard -w +a-3-4-6-9-22-26-27-30-32-33-34-39-40-41-42-44-48-60 -unsafe-string -short-paths -strict-formats -strict-sequence -O3 -bin-annot -unbox-closures -inlining-report))
 (libraries
  uuseg
  uuseg.string
  uutf
  menhirLib)
)

(menhir
 (flags --explain --interpret-show-cst --table)
 (modules parser))

(ocamllex lexer)
